# gst_video_analyzer

./: CMakeLists.txt  INSTALLATION.txt  class_names.h  detection_meta.h  gst_video_analyzer.cpp  gst_video_analyzer.h  video_analyzer.cpp  video_analyzer.h  wrapper.h
tests/: CMakeLists.txt  showcase.cpp
